# FreeRTOS_RaspberryPI

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  main.c
